setup correct monitor config

--- a/hyprland/.config/hypr/modules/monitors.conf
+++ b/hyprland/.config/hypr/modules/monitors.conf
@@ -1,6 +1,4 @@
-################
-### MONITORS ###
-################
-
-# See https://wiki.hypr.land/Configuring/Monitors/
-monitor=,preferred,auto,auto
+# https://wiki.hypr.land/Configuring/Monitors/
+# monitor = name, resolution, position, scale
+# Default: monitor=,preferred,auto,auto
+monitor = eDP-1, 1920x1080, 0x0, 1
